Start using labels over namespace & name
