# openapi/server.go
@@ -61,8 +61,7 @@ func ServerFromInternal(objective slo.Objective) server.Objective {
 	}
 
 	return server.Objective{
-		Name:        objective.Name,
-		Namespace:   objective.Namespace,
+		Labels:      objective.Labels.Map(),
 		Description: objective.Description,
 		Target:      objective.Target,
 		Window:      time.Duration(objective.Window).Milliseconds(),
@@ -121,8 +120,7 @@ func ServerFromClient(o client.Objective) server.Objective {
 	}
 
 	return server.Objective{
-		Name:        o.GetName(),
-		Namespace:   o.GetNamespace(),
+		Labels:      o.GetLabels(),
 		Description: o.GetDescription(),
 		Target:      o.GetTarget(),
 		Window:      o.GetWindow(),
