# openapi/server/go/api_objectives.go
@@ -32,37 +32,37 @@ func (c *ObjectivesApiController) Routes() Routes {
 		{
 			"GetMultiBurnrateAlerts",
 			strings.ToUpper("Get"),
-			"/api/v1/objectives/{namespace}/{name}/alerts",
+			"/api/v1/objectives/{expr}/alerts",
 			c.GetMultiBurnrateAlerts,
 		},
 		{
 			"GetObjective",
 			strings.ToUpper("Get"),
-			"/api/v1/objectives/{namespace}/{name}",
+			"/api/v1/objectives/{expr}",
 			c.GetObjective,
 		},
 		{
 			"GetObjectiveErrorBudget",
 			strings.ToUpper("Get"),
-			"/api/v1/objectives/{namespace}/{name}/errorbudget",
+			"/api/v1/objectives/{expr}/errorbudget",
 			c.GetObjectiveErrorBudget,
 		},
 		{
 			"GetObjectiveStatus",
 			strings.ToUpper("Get"),
-			"/api/v1/objectives/{namespace}/{name}/status",
+			"/api/v1/objectives/{expr}/status",
 			c.GetObjectiveStatus,
 		},
 		{
 			"GetREDErrors",
 			strings.ToUpper("Get"),
-			"/api/v1/objectives/{namespace}/{name}/red/errors",
+			"/api/v1/objectives/{expr}/red/errors",
 			c.GetREDErrors,
 		},
 		{
 			"GetREDRequests",
 			strings.ToUpper("Get"),
-			"/api/v1/objectives/{namespace}/{name}/red/requests",
+			"/api/v1/objectives/{expr}/red/requests",
 			c.GetREDRequests,
 		},
 		{
@@ -77,11 +77,9 @@ func (c *ObjectivesApiController) Routes() Routes {
 // GetMultiBurnrateAlerts - Get the MultiBurnrateAlerts for the Objective
 func (c *ObjectivesApiController) GetMultiBurnrateAlerts(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
-	namespace := params["namespace"]
+	expr := params["expr"]
 
-	name := params["name"]
-
-	result, err := c.service.GetMultiBurnrateAlerts(r.Context(), namespace, name)
+	result, err := c.service.GetMultiBurnrateAlerts(r.Context(), expr)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		EncodeJSONResponse(err.Error(), &result.Code, w)
@@ -95,11 +93,9 @@ func (c *ObjectivesApiController) GetMultiBurnrateAlerts(w http.ResponseWriter, 
 // GetObjective - Get Objective
 func (c *ObjectivesApiController) GetObjective(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
-	namespace := params["namespace"]
+	expr := params["expr"]
 
-	name := params["name"]
-
-	result, err := c.service.GetObjective(r.Context(), namespace, name)
+	result, err := c.service.GetObjective(r.Context(), expr)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		EncodeJSONResponse(err.Error(), &result.Code, w)
@@ -114,9 +110,7 @@ func (c *ObjectivesApiController) GetObjective(w http.ResponseWriter, r *http.Re
 func (c *ObjectivesApiController) GetObjectiveErrorBudget(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
 	query := r.URL.Query()
-	namespace := params["namespace"]
-
-	name := params["name"]
+	expr := params["expr"]
 
 	start, err := parseInt32Parameter(query.Get("start"), false)
 	if err != nil {
@@ -128,7 +122,7 @@ func (c *ObjectivesApiController) GetObjectiveErrorBudget(w http.ResponseWriter,
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
-	result, err := c.service.GetObjectiveErrorBudget(r.Context(), namespace, name, start, end)
+	result, err := c.service.GetObjectiveErrorBudget(r.Context(), expr, start, end)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		EncodeJSONResponse(err.Error(), &result.Code, w)
@@ -142,11 +136,9 @@ func (c *ObjectivesApiController) GetObjectiveErrorBudget(w http.ResponseWriter,
 // GetObjectiveStatus - Get objective status
 func (c *ObjectivesApiController) GetObjectiveStatus(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
-	namespace := params["namespace"]
+	expr := params["expr"]
 
-	name := params["name"]
-
-	result, err := c.service.GetObjectiveStatus(r.Context(), namespace, name)
+	result, err := c.service.GetObjectiveStatus(r.Context(), expr)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		EncodeJSONResponse(err.Error(), &result.Code, w)
@@ -161,9 +153,7 @@ func (c *ObjectivesApiController) GetObjectiveStatus(w http.ResponseWriter, r *h
 func (c *ObjectivesApiController) GetREDErrors(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
 	query := r.URL.Query()
-	namespace := params["namespace"]
-
-	name := params["name"]
+	expr := params["expr"]
 
 	start, err := parseInt32Parameter(query.Get("start"), false)
 	if err != nil {
@@ -175,7 +165,7 @@ func (c *ObjectivesApiController) GetREDErrors(w http.ResponseWriter, r *http.Re
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
-	result, err := c.service.GetREDErrors(r.Context(), namespace, name, start, end)
+	result, err := c.service.GetREDErrors(r.Context(), expr, start, end)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		EncodeJSONResponse(err.Error(), &result.Code, w)
@@ -190,9 +180,7 @@ func (c *ObjectivesApiController) GetREDErrors(w http.ResponseWriter, r *http.Re
 func (c *ObjectivesApiController) GetREDRequests(w http.ResponseWriter, r *http.Request) {
 	params := mux.Vars(r)
 	query := r.URL.Query()
-	namespace := params["namespace"]
-
-	name := params["name"]
+	expr := params["expr"]
 
 	start, err := parseInt32Parameter(query.Get("start"), false)
 	if err != nil {
@@ -204,7 +192,7 @@ func (c *ObjectivesApiController) GetREDRequests(w http.ResponseWriter, r *http.
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
-	result, err := c.service.GetREDRequests(r.Context(), namespace, name, start, end)
+	result, err := c.service.GetREDRequests(r.Context(), expr, start, end)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		EncodeJSONResponse(err.Error(), &result.Code, w)
