# openapi/server/go/api_objectives_service.go
@@ -27,7 +27,7 @@ func NewObjectivesApiService() ObjectivesApiServicer {
 }
 
 // GetMultiBurnrateAlerts - Get the MultiBurnrateAlerts for the Objective
-func (s *ObjectivesApiService) GetMultiBurnrateAlerts(ctx context.Context, namespace string, name string) (ImplResponse, error) {
+func (s *ObjectivesApiService) GetMultiBurnrateAlerts(ctx context.Context, expr string) (ImplResponse, error) {
 	// TODO - update GetMultiBurnrateAlerts with the required logic for this service method.
 	// Add api_objectives_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
 
@@ -38,7 +38,7 @@ func (s *ObjectivesApiService) GetMultiBurnrateAlerts(ctx context.Context, names
 }
 
 // GetObjective - Get Objective
-func (s *ObjectivesApiService) GetObjective(ctx context.Context, namespace string, name string) (ImplResponse, error) {
+func (s *ObjectivesApiService) GetObjective(ctx context.Context, expr string) (ImplResponse, error) {
 	// TODO - update GetObjective with the required logic for this service method.
 	// Add api_objectives_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
 
@@ -49,7 +49,7 @@ func (s *ObjectivesApiService) GetObjective(ctx context.Context, namespace strin
 }
 
 // GetObjectiveErrorBudget - Get ErrorBudget graph sample pairs
-func (s *ObjectivesApiService) GetObjectiveErrorBudget(ctx context.Context, namespace string, name string, start int32, end int32) (ImplResponse, error) {
+func (s *ObjectivesApiService) GetObjectiveErrorBudget(ctx context.Context, expr string, start int32, end int32) (ImplResponse, error) {
 	// TODO - update GetObjectiveErrorBudget with the required logic for this service method.
 	// Add api_objectives_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
 
@@ -60,7 +60,7 @@ func (s *ObjectivesApiService) GetObjectiveErrorBudget(ctx context.Context, name
 }
 
 // GetObjectiveStatus - Get objective status
-func (s *ObjectivesApiService) GetObjectiveStatus(ctx context.Context, namespace string, name string) (ImplResponse, error) {
+func (s *ObjectivesApiService) GetObjectiveStatus(ctx context.Context, expr string) (ImplResponse, error) {
 	// TODO - update GetObjectiveStatus with the required logic for this service method.
 	// Add api_objectives_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
 
@@ -71,7 +71,7 @@ func (s *ObjectivesApiService) GetObjectiveStatus(ctx context.Context, namespace
 }
 
 // GetREDErrors - Get a matrix of error percentage by label
-func (s *ObjectivesApiService) GetREDErrors(ctx context.Context, namespace string, name string, start int32, end int32) (ImplResponse, error) {
+func (s *ObjectivesApiService) GetREDErrors(ctx context.Context, expr string, start int32, end int32) (ImplResponse, error) {
 	// TODO - update GetREDErrors with the required logic for this service method.
 	// Add api_objectives_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
 
@@ -82,7 +82,7 @@ func (s *ObjectivesApiService) GetREDErrors(ctx context.Context, namespace strin
 }
 
 // GetREDRequests - Get a matrix of requests by label
-func (s *ObjectivesApiService) GetREDRequests(ctx context.Context, namespace string, name string, start int32, end int32) (ImplResponse, error) {
+func (s *ObjectivesApiService) GetREDRequests(ctx context.Context, expr string, start int32, end int32) (ImplResponse, error) {
 	// TODO - update GetREDRequests with the required logic for this service method.
 	// Add api_objectives_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
 
