# openapi/server/go/model_objective.go
@@ -10,9 +10,7 @@
 package openapi
 
 type Objective struct {
-	Name string `json:"name"`
-
-	Namespace string `json:"namespace"`
+	Labels map[string]string `json:"labels,omitempty"`
 
 	Description string `json:"description"`
 
